## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added

** Changed

** Fixed

** Removed

* 0.0.6 - 2017-05-20
** Added
Added absolute addresses to High level assembler output to aid in debugging of complex assembly programs
Added Let expressions to High Level prototype lisp
Added Let expressions to stage2 lisp implementation

** Changed
Converted High level prototype lisp from dynamic scope to Lexical
Converted stage2 lisp implementation from dynamic scope to Lexical

** Fixed
Made Web debugger provide more useful information
Fixed regression in web debugger's ability to read input files
Fixed regression in stage2 lisp garbage collection interacting with let expressions
Fixed SHA256SUM of stage2 lisp to match new binary result

** Removed

* 0.0.5 - 2017-05-06
** Added
Added write to lisp
Added Cell Compactor to Lisp garbage collector resulting with multiple performance improvements
Added bootstrapping steps documentation
Added ability to specify amount of Available RAM on a Per run basis, however 16KB is the default

** Changed
Correct lisp High level prototype to include line comments
Changed default RAM to 16KB
Updated bootstrap documentation to match the memory requirements of the individual steps

** Fixed
Fixed missing traces when memory outside of world are accessed when profiling
Imported improved High Level Lisp Prototype
Updated bootstrap documentation to reflect change in Lisp sha256sum caused by recent performance upgrade

** Removed

* 0.0.4 - 2017-02-18
** Added
+ Added missing primitives from High level prototype to lisp implementation
+ Improved Eval's debugging messages

** Changed